--- a/BookStore.BL/BookStore.BL.csproj
+++ b/BookStore.BL/BookStore.BL.csproj
@@ -10,9 +10,9 @@
     <None Remove="Interfaces\" />
     <None Remove="Services\" />
   </ItemGroup>
+
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BookStore.Models\BookStore.Models.csproj" />
