--- a/BookStore.DL/BookStore.DL.csproj
+++ b/BookStore.DL/BookStore.DL.csproj
@@ -14,8 +14,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="InMemoryDb\" />
-    <Folder Include="Repositories\" />
     <Folder Include="Repositories\InMemoryRepo\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BookStore.Models\BookStore.Models.csproj" />
