--- a/BookStore.Models/BookStore.Models.csproj
+++ b/BookStore.Models/BookStore.Models.csproj
@@ -10,4 +10,9 @@
     <Folder Include="Responses\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+  </ItemGroup>
+
 </Project>
