--- a/UniAPI/appsettings.json
+++ b/UniAPI/appsettings.json
@@ -7,8 +7,10 @@
   },
   "AllowedHosts": "*",
   "MongoDbConfiguration": {
-    "ConnectionString": "mongodb+srv://pu_net_core:123456y@pu-net-core.52gte.mongodb.net/BookStore?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://denislavdimovv:De58236989741@cluster0.bp7ecsf.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "BookStore"
   }
 }
+
+//mongodb+srv://pu_net_core:123456y@pu-net-core.52gte.mongodb.net/BookStore?retryWrites=true&w=majority
 
