--- a/UniAPI/appsettings.json
+++ b/UniAPI/appsettings.json
@@ -9,6 +9,12 @@
   "MongoDbConfiguration": {
     "ConnectionString": "mongodb+srv://denislavdimovv:De58236989741@cluster0.bp7ecsf.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "BookStore"
+  },
+  "Jwt": {
+    "Key": "asdasdasdenislavkdjjjksdf1321",
+    "Issuer": "JWTAuthenticationServer",
+    "Audience": "JWTServiceClient",
+    "Subject": "JWTServiceAccessToken"
   }
 }
 
